--- a/css/home.css
+++ b/css/home.css
@@ -1,4 +1,19 @@
 .hero {
+  background-image: radial-gradient(
+      circle,
+      rgba(0, 0, 0, 0) 0%,
+      rgba(0, 0, 0, 0.7) 100%
+    ),
+    url("../assets/images/hero_background.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+
+  min-height: 120vh;
+  color: #e7e7e7;
+}
+
+.hero__container {
   margin: 0 auto;
   max-width: var(--max-width);
   padding: 0 2rem;
