--- a/css/style.css
+++ b/css/style.css
@@ -19,9 +19,22 @@ body {
 /* Navigation Menu */
 
 .header__header {
-  padding: 1.5rem 0;
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0.7),
+    rgba(255, 255, 255, 0)
+  );
+  position: fixed;
+  width: 100%;
+}
+
+.header__container {
+  padding: 1.5rem 2rem;
   display: flex;
   justify-content: space-between;
+
+  max-width: var(--max-width);
+  margin: 0 auto;
 }
 
 .header__logo {
@@ -74,7 +87,7 @@ body {
   height: 0;
   border-left: 4px solid transparent;
   border-right: 4px solid transparent;
-  border-top: 4px solid #000;
+  border-top: 4px solid #fff;
   transition: transform 0.3s ease;
 }
 
