--- a/css/home.css
+++ b/css/home.css
@@ -1,4 +1,13 @@
 .hero {
+  position: relative;
+  min-height: 100vh;
+  color: #e7e7e7;
+  overflow: hidden;
+}
+
+.hero__bg {
+  position: absolute;
+  inset: 0;
   background-image: radial-gradient(
       circle,
       rgba(0, 0, 0, 0) 70%,
@@ -8,9 +17,8 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-
-  min-height: 100vh;
-  color: #e7e7e7;
+  z-index: -1;
+  pointer-events: none;
 }
 
 .hero__container {
