--- a/css/home.css
+++ b/css/home.css
@@ -1,6 +1,6 @@
 .hero {
   position: relative;
-  min-height: 100vh;
+  min-height: 70vh;
   color: #e7e7e7;
   overflow: hidden;
 }
@@ -8,10 +8,12 @@
 .hero__bg {
   position: absolute;
   inset: 0;
-  background-image: radial-gradient(
-      circle,
-      rgba(0, 0, 0, 0) 70%,
-      rgba(0, 0, 0, 1) 100%
+  background-image: linear-gradient(
+      180deg,
+      rgba(255, 255, 255, 0) 0%,
+      rgba(255, 255, 255, 0) 75%,
+      rgba(255, 255, 255, 0.8) 90%,
+      rgba(255, 255, 255, 1) 100%
     ),
     url("../assets/images/hero_background.png");
   background-size: cover;
