--- a/css/home.css
+++ b/css/home.css
@@ -11,13 +11,13 @@
   background-image: linear-gradient(
       180deg,
       rgba(255, 255, 255, 0) 0%,
-      rgba(255, 255, 255, 0) 75%,
-      rgba(255, 255, 255, 0.8) 90%,
+      rgba(255, 255, 255, 0) 70%,
+      rgba(255, 255, 255, 0.9) 85%,
       rgba(255, 255, 255, 1) 100%
     ),
-    url("../assets/images/hero_background.png");
-  background-size: 100%;
-  background-position: center;
+    url("../assets/images/home/hero_background.png");
+  background-size: cover;
+  background-position: bottom;
   background-repeat: no-repeat;
   z-index: -1;
   pointer-events: none;
@@ -38,7 +38,6 @@
 
 .hero__group {
   display: grid;
-  gap: 1.5rem;
   justify-items: center;
 }
 
@@ -59,6 +58,7 @@
 }
 
 .hero__cta {
+  margin-top: 1.5rem;
   display: inline-flex;
   align-items: center;
   gap: 0.5rem;
