--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,8 @@ html {
   width: 100%;
   color: #e7e7e7;
   z-index: 100;
+  transition: background-color 0.25s ease, color 0.25s ease,
+    box-shadow 0.25s ease;
 }
 
 .header__container {
@@ -71,6 +73,11 @@ html {
   border-radius: 3rem;
 }
 
+.header__nav > ul > li > a {
+  color: inherit;
+  text-decoration: none;
+}
+
 /* Navigation Items */
 .header__nav-item--dropdown {
   position: relative;
@@ -96,6 +103,21 @@ html {
 .header__nav-item--dropdown.header__nav-item--active
   .header__nav-link--dropdown::after {
   transform: rotate(180deg);
+}
+
+.header__header--solid {
+  background: #fff;
+  color: #111;
+  box-shadow: 0 2px 12px rgba(0, 0, 0, 0.06);
+}
+
+.header__header--solid .header__nav-link--dropdown::after {
+  border-top-color: #111;
+}
+
+.header__nav-cta a {
+  color: inherit;
+  text-decoration: none;
 }
 
 /* Dropdown Menu */
