--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,11 @@ html {
   scroll-behavior: smooth;
 }
 
-/* Logo */
+.page--inner .page__main {
+  max-width: var(--max-width);
+  margin: 0 auto;
+  padding: 7rem 2rem 2rem 2rem;
+}
 
 /* Navigation Menu */
 
@@ -47,6 +51,11 @@ html {
   font-weight: 700;
 
   user-select: none;
+}
+
+.header__logo a {
+  color: inherit;
+  text-decoration: none;
 }
 
 .logo__accent {
@@ -108,6 +117,9 @@ html {
 .header__header--solid {
   background: #fff;
   color: #111;
+}
+
+.header__header--elevated {
   box-shadow: 0 2px 12px rgba(0, 0, 0, 0.1);
 }
 
