feat: recipes page structure w/ search and filtering

--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,14 @@ body {
 
 html {
   scroll-behavior: smooth;
+  overflow-y: auto;
+  scrollbar-gutter: stable both-edges;
+}
+
+@supports not (scrollbar-gutter: stable) {
+  html {
+    overflow-y: scroll;
+  }
 }
 
 .page--inner .page__main {
