fix: updated and fixed all images in recipe cards

--- a/css/recipes.css
+++ b/css/recipes.css
@@ -71,6 +71,9 @@
   font-family: var(--font-body);
   padding: 0 1rem;
   text-align: center;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .recipe-card__body {
