--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body {
 html {
   scroll-behavior: smooth;
   overflow-y: auto;
-  scrollbar-gutter: stable both-edges;
+  scrollbar-gutter: stable;
 }
 
 @supports not (scrollbar-gutter: stable) {
