--- a/css/style.css
+++ b/css/style.css
@@ -302,12 +302,13 @@ body.no-scroll {
 .footer__bottom {
   border-top: 1px solid #eee;
   margin-top: 2rem;
-  padding: 1.5rem 2rem 1.5rem 2rem;
+  padding: 1.5rem 0;
 }
 
 .footer__brand {
   max-width: var(--max-width);
   margin: 0 auto;
+  padding: 0 2rem;
   font-family: var(--font-primary);
   font-size: 1.5rem;
   font-weight: 700;
