--- a/css/style.css
+++ b/css/style.css
@@ -255,7 +255,7 @@ body.no-scroll {
 }
 
 .header__mobile-nav {
-  padding: 1rem 1.25rem 2rem 1.25rem;
+  padding: 1rem 1rem 2rem 1rem;
   overflow-y: auto;
 }
 
@@ -306,6 +306,11 @@ body.is-mobile-menu-open .header__mobile-drawer {
 }
 
 @media (max-width: 900px) {
+  .page__main {
+    padding-left: 1rem !important;
+    padding-right: 1rem !important;
+  }
+
   .header__header--mobile-enabled .header__nav {
     display: none;
   }
