--- a/css/style.css
+++ b/css/style.css
@@ -255,7 +255,7 @@ body.no-scroll {
 }
 
 .header__mobile-nav {
-  padding: 1rem 1rem 2rem 1rem;
+  padding: 1.25rem 1rem;
   overflow-y: auto;
 }
 
