--- a/css/contact.css
+++ b/css/contact.css
@@ -51,7 +51,8 @@
 
 .form__field input:focus,
 .form__field textarea:focus {
-  outline: 1.5px solid var(--color-primary);
+  outline: 1px solid var(--color-primary);
+  border-color: var(--color-primary);
 }
 
 .form__actions {
