--- a/css/style.css
+++ b/css/style.css
@@ -416,7 +416,8 @@ body.is-mobile-menu-open .header__mobile-drawer {
 }
 
 .footer__form input:focus {
-  outline: 1.5px solid var(--color-primary);
+  outline: 1px solid var(--color-primary);
+  border-color: var(--color-primary);
 }
 
 .footer__form button {
