--- a/css/style.css
+++ b/css/style.css
@@ -232,6 +232,20 @@ body.is-mobile-menu-open .header__mobile-drawer {
   transform: translateX(0);
 }
 
+@media (max-width: 980px) {
+  .header__header--mobile-enabled .header__nav {
+    display: none;
+  }
+
+  .header__header--mobile-enabled .header__nav-cta {
+    display: none;
+  }
+
+  .header__header--mobile-enabled .header__hamburger {
+    display: inline-flex;
+  }
+}
+
 @media (max-width: 900px) {
   .page__main {
     padding-left: 1rem !important;
